# pass-conditioned-reading

./: .gitignore  Makefile  README.md  pyproject.toml
data/views/: DATA_CARD.md  views_config.yaml
docs/: CONSOLIDATED-FINDINGS.md  DECISIONS.md  GATES.md  PUBLIC-SUMMARY.md  gauntlet-arbitration.md  pca-outline-v0.3.md  verification-arbitration.md
experiments/e0_view_classifier/: KIRO_FIDELITY.md  RESULTS.md  RESULTS_FINAL.md  config_final.yaml  config_provisional.yaml  kiro_fidelity_check.py  metrics.json  run.py
experiments/e0_view_classifier/results_final/: audit.json  metrics.json  metrics_kiro_only.json
experiments/p1_micro_pilot/: judge_stub.py  run.py  schedules.yaml  summarize.py
experiments/p1_micro_pilot/prompts/: demand_concrete.txt  demand_full_detail.txt  demand_scaffold.txt  demand_verbatim.txt  system.txt  user_template.txt
experiments/p1_micro_pilot/transcripts/: OBSERVATIONS.md  README.md  coupled.md  coupled_states.json  (+4 more)
experiments/p2_position_pilot/: RESULTS.md  config.yaml  items.jsonl  metrics.json  run.py
experiments/p3_prompt_rubric/: RESULTS.md  config.yaml  items.jsonl  metrics.json  run.py
experiments/p4_planted_facts/: RESULTS.md  config.yaml  dryrun.py  metrics.json  run.py  score.py
experiments/p5_verbatim_contamination/: PRE-REG.md  RESULTS.md  config.yaml  run.py
experiments/p6_global_synthesis/: PRE-REG.md  config.yaml  gold_chain.json  run.py
src/pca/: __init__.py  compressor.py  editops.py  gen_views.py  gen_views_llm.py  llm.py  merge_paths.py  planted.py  schedule.py  test_editops.py  textutils.py
(+20 files in other folders)
