[project]
name = "pca"
version = "0.1.0"
description = "Pass-Conditioned Architectures experiments: E0 gate + P1/P2 pilots (DiSCo / Context Diffusion)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "datasets>=3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
    "requests>=2.32",
    "tiktoken>=0.8",
]

[tool.uv]
# CPU-only by design: E0 must run with no GPU assumptions.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pca"]
